force-app/main/default/objects/Purchased_Product__c/Purchased_Product__c.object-meta.xml
<CustomObject>
    <label>Purchased Product</label>
    <nameField>
        <displayFormat>PPD-{0}</displayFormat>
        <label>PProd ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchased Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>