force-app/main/default/objects/Purchased_Product__c/fields/A_la_Carte__c.field-meta.xml
<CustomField>
    <fullName>A_la_Carte__c</fullName>
    <label>A la Carte</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company Seal</fullName>
            </value>
            <value>
                <fullName>Corporate Binder</fullName>
            </value>
            <value>
                <fullName>EIN Number</fullName>
            </value>
            <value>
                <fullName>Expedited Processing</fullName>
            </value>
            <value>
                <fullName>Full Service Bookkeeping (10/100)</fullName>
            </value>
            <value>
                <fullName>Full Service Bookkeeping (5/50)</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>LZ Biz Income Tax</fullName>
            </value>
            <value>
                <fullName>LZ Compliance</fullName>
            </value>
            <value>
                <fullName>LZ Legal Plan</fullName>
            </value>
            <value>
                <fullName>New Entity Public Filing Notice</fullName>
            </value>
            <value>
                <fullName>Operating Agreement</fullName>
            </value>
            <value>
                <fullName>Payroll - 1 Employee</fullName>
            </value>
            <value>
                <fullName>Payroll - 3 Employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 5 employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 6 employees</fullName>
            </value>
            <value>
                <fullName>Payroll - 7 employees</fullName>
            </value>
            <value>
                <fullName>Quarterly Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Resident Agent</fullName>
            </value>
            <value>
                <fullName>Sales and Use Tax</fullName>
            </value>
            <value>
                <fullName>Tax Consulting</fullName>
            </value>
            <value>
                <fullName>Tax Prep 2014 - Business</fullName>
            </value>
            <value>
                <fullName>Tax Prep 2014 - Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>