force-app/main/default/objects/Purchased_Product__c/fields/Initial_Price__c.field-meta.xml
<CustomField>
    <fullName>Initial_Price__c</fullName>
    <label>Initial Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>