force-app/main/default/objects/Purchased_Product__c/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Basic (Finance)</fullName>
            </value>
            <value>
                <fullName>Basic (Half Payment Plan)</fullName>
            </value>
            <value>
                <fullName>Basic Plus Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Basic Plus Estimated Taxes (Finance)</fullName>
            </value>
            <value>
                <fullName>Basic Plus Estimated Taxes (Half Payment)</fullName>
            </value>
            <value>
                <fullName>Entity Setup</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Pro (Finance)</fullName>
            </value>
            <value>
                <fullName>Pro (Half Payment)</fullName>
            </value>
            <value>
                <fullName>Pro Plus (Half Payment)</fullName>
            </value>
            <value>
                <fullName>Pro Plus Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Pro Plus Estimated Taxes (Finance)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>