force-app/main/default/objects/Purchased_Product__c/fields/Pricing_Details__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Details__c</fullName>
    <label>Pricing Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>