force-app/main/default/objects/Purchased_Product__c/fields/Recurring_Price__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Price__c</fullName>
    <label>Recurring Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>