force-app/main/default/objects/Purchased_Product__c/fields/Recurring_Rules__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Rules__c</fullName>
    <label>Recurring Rules</label>
    <type>TextArea</type>
</CustomField>