force-app/main/default/objects/Purchased_Product__c/fields/thing__c.field-meta.xml
<CustomField>
    <fullName>thing__c</fullName>
    <label>thing</label>
    <length>25</length>
    <type>Text</type>
</CustomField>